@@ -14,4 +14,3 @@ Todo for 0.27:
     - Get more items translatable.
     - Try out pygame.key.set_repeat()
     - Make construction that requires CPU a research option when needed.
-    - Give idle bases a discovery bonus.
